app/static/swagger-ui.css
/* BEGIN: MY CUSTOMIZATIONS */

html {
  background-color: var(--page-bg-color);
}

body {
  display: flex;
  margin: 0;
  width: 100%;
}

#swagger-ui {
  width: 100%;
}

:root {
  --page-bg-color: hsl(0, 0%, 100%);
  --header-bg-color: hsla(0, 0%, 0%, 0.07);
  --header-hover-bg-color: hsla(0, 0%, 0%, 0.09);
  --base-text-color: hsl(224, 16%, 27%);
  --darker-text-color: hsl(224, 16%, 10%);
  --link-color: hsl(212, 73%, 59%);
  --link-hover-color: hsl(212, 72%, 44%);
  --code-color: hsl(272, 99%, 53%);

  --details-header-bg-color: var(--header-bg-color);
  --details-header-hover-bg-color: var(--header-hover-bg-color);
  --details-header-text-color: var(--base-text-color);

  --params-details-header-bg-color: hsla(210, 99%, 20%, 0.7);
  --params-details-header-hover-bg-color: hsla(210, 99%, 20%, 0.8);
  --params-details-header-text-color: hsl(0, 0%, 100%);
  --params-dl-border-color: hsla(210, 99%, 20%, 0.7);
  --params-dl-bg-color: hsla(210, 99%, 20%, 0.2);
  --params-details-footer-bg-color: hsla(210, 99%, 20%, 0.2);

  --dl-bg-color: hsla(0, 0%, 0%, 0.03);
  --dl-border-color: hsl(0, 0%, 85%);

  --dt-text-color: var(--darker-text-color);
  --dd-text-color: var(--base-text-color);

  --schemas-bg-color: hsl(0, 0%, 100%);
  --schemas-header-color: hsl(0, 0%, 38%);
  --schemas-text-color: var(--base-text-color);
  --model-bg-color: var(--header-bg-color);
  --model-hover-bg-color: rgba(0, 0, 0, 0.07);
  --model-name-color: hsl(0, 0%, 31%);

  --get-color-dark: hsl(210, 99%, 69%);
  --get-color-darker: hsl(210, 99%, 50%);
  --get-color-light: hsla(210, 99%, 69%, 0.1);
  --get-method-name-color: hsl(0, 0%, 100%);
  --get-section-header-bg-color: hsla(0, 0%, 100%, 0.8);

  --params-outer-border-color: var(--get-color-darker);
  --params-inner-border-color: var(--get-color-darker);

  --params-name-color: var(--darker-text-color);
  --params-name-font-size: 14px;
  --params-name-font-weight: 600;

  --params-type-color: var(--code-color);

  --params-loc-reqs-color: var(--get-color-darker);
  --params-loc-reqs-font-weight: 500;

  --input-text-bg-color: hsl(0, 0%, 100%);
  --input-text-fg-color: hsl(0, 0%, 0%);
  --input-text-border-color: hsl(226, 9%, 28%);
  --input-text-padding: 4px 5px;
  --input-box-margin: 0 0 5px 0;

  --input-text-invalid-bg-color: hsl(0, 90%, 96%);
  --input-text-invalid-fg-color: hsl(0, 0%, 0%);
  --input-text-invalid-border-color: hsl(0, 94%, 61%);

  --api-version-badge-bg-color: hsl(220, 9%, 53%);
  --api-version-badge-text-color: hsl(0, 0%, 100%);

  --oas-version-badge-bg-color: hsl(77, 96%, 38%);
  --oas-version-badge-text-color: hsl(0, 0%, 100%);

  --required-color: hsl(0, 100%, 69%);
  --cancel-color: hsl(0, 100%, 69%);

  --execute-button-bg-color: hsl(212, 73%, 59%);
  --execute-button-text-color: hsl(0, 0%, 100%);

  --clear-button-bg-color: transparent;
  --clear-button-text-color: var(--base-text-color);
  --clear-button-border-color: hsl(0, 0%, 50%);

  --controls-media-type-color: hsl(120, 100%, 25%);

  --super-script-table-color: var(--base-text-color);

  --select-box-border-color: hsl(226, 9%, 28%);
  --select-box-margin: 0 0 5px 0;

  /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
  font-family: sans-serif;
  color: var(--base-text-color);
  min-width: 685px;
  max-width: 800px;
  margin: 0 auto;
}

[data-param-name="show_props"] select[multiple] {
  height: 333px;
}

.swagger-ui .renderedMarkdown p > i > strong > span {
  font-style: normal;
  text-decoration: underline;;
  font-weight: 500;
}

.swagger-ui .renderedMarkdown p {
  margin: 0 0 15px 0 !important;
}

.swagger-ui details {
  margin: 1rem 0;
}

.swagger-ui details,
.swagger-ui menu {
  display: block;
}

.swagger-ui summary {
  cursor: pointer;
  color: var(--details-header-text-color);
  background-color: var(--details-header-bg-color);
  border: 1px solid var(--dl-border-color);
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  padding: 0.5rem;
  line-height: 1;
  list-style: none;
}

.swagger-ui [open] summary {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top: 1px solid var(--dl-border-color);
  border-left: 1px solid var(--dl-border-color);
  border-right: 1px solid var(--dl-border-color);
  border-bottom: none;
}

.description summary > div {
  display: flex;
  gap: 0.75rem;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  margin: 0 0 0 0.25rem;
  padding: 0.25rem 1rem 0.25rem 0;
}

.description summary > div > div {
  height: 16px;
  transition: transform 0.3s ease-in;
}

.description [open] summary > div > div {
  transform: rotate(90deg);
}

.description details summary > div > div > svg {
  height: 100%;
}

.swagger-ui summary:hover {
  background-color: var(--details-header-hover-bg-color);
}

.parameters details summary {
  color: var(--params-details-header-text-color);
  background-color: var(--params-details-header-bg-color);
  border-top: 1px solid var(--params-dl-border-color) !important;
  border-bottom: 1px solid var(--params-dl-border-color) !important;
  border-left: 1px solid var(--params-dl-border-color) !important;
  border-right: 1px solid var(--params-dl-border-color) !important;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.5px;
  line-height: 1;
  gap: 0.15rem;
  list-style: none;
}

.parameters [open] summary {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top: 1px solid var(--params-dl-border-color) !important;
  border-left: 1px solid var(--params-dl-border-color) !important;
  border-right: 1px solid var(--params-dl-border-color) !important;
  border-bottom: 0.5px solid var(--params-dl-border-color) !important;
}
/* ... */

